examples/datalog/08_negation/46_negation_only_body.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_neg_only
Knowledge graph 'test_neg_only' created.
Switched to knowledge graph: test_neg_only
> .kg use test_neg_only
Switched to knowledge graph: test_neg_only
> +exclude[(1,), (2,)].
Inserted 2 fact(s) into 'exclude'.
> bad(X) :- !exclude(X).
Script error: Query execution failed: Unsafe rule: Atom { relation: "bad", args: [Variable("X")] }. Variables ["X"] in head do not appear in positive body atoms.
